# loregarden

./: .gitignore  .mcp.json  ADVERSARIAL_TEST_SUMMARY.md  AGENTS.md  BACKEND_IMPLEMENTATION_COMPLETE.md  BACKEND_IMPL_40_COMPLETION.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PHASE_1A_COMPLETE.md  PHASE_1A_TASKS.md  PHASE_1B_FRONTEND_SUMMARY.md  PHASE_1B_PROGRESS.md  PHASE_1B_TASKS.md  PHASE_2_TESTING_GUIDE.md  PHASE_2_WEBSOCKET_INTEGRATION_GUIDE.md  PHASE_2_WEBSOCKET_PLAN.md  PHASE_2_WEBSOCKET_SUMMARY.md  PHASE_3_FUTURE_ENHANCEMENTS.md  PHASE_3_QUEUE_VISUALIZATION.md  README.md  RESEARCH_VALIDATION_NORMALIZATION.md  SPEC_40_RESEARCH.md  SPEC_42_RESEARCH.md  SPEC_GAPS_AND_QUESTIONS.md  TEST_82_STAGE_COMPLETION.md  TEST_BREAKER_FINDINGS_40.md  TEST_BREAKER_REPORT.md  TEST_BREAK_COMPLETION_SUMMARY.md  TEST_BREAK_STAGE_COMPLETE.md  TEST_BREAK_STAGE_FINAL_COMPLETION.md  TEST_DECOMPOSITION_SERVICE_SUMMARY.md  TEST_DESIGNER_VERIFICATION_40.md  TICKET_39_COMPREHENSIVE_TESTBREAK_SUMMARY.md  TICKET_39_EXECUTION_PLAN.md  TICKET_39_PHASE2_TESTBREAK_FINDINGS.md  TICKET_39_QA_SIGN_OFF.md  TICKET_39_SPECIFICATION.md  TICKET_39_TEST_BREAK_ANALYSIS.md  TICKET_39_TEST_BREAK_FINDINGS.md  TICKET_39_TEST_BREAK_SUMMARY.md  (+9 more)
.claude/: launch.json
.cursor/: mcp.json
client/: index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.app.json
docs/: AUDIT.md  ci-setup.md  handoff-write-api-design.md  tauri.md
project_board/: CHECKPOINTS.md
scripts/: build-backend.sh  dev-client.sh  dev-server.sh  export_project_board.sh  (+5 more)
server/: TEST_COVERAGE_42.md  pyproject.toml
server/loregarden/: __init__.py  __main__.py  config.py  main.py  websocket.py  websocket_events.py
server/loregarden/agents/: cli_adapters.py  evidence_context.py  inherited_wisdom.py  mcp_context.py  plan_context.py  registry.py  stage_context.py  verify_context.py
server/loregarden/agents/executors/: cli.py  lmstudio_runner.py  local_runner.py  permission_bridge.py
server/loregarden/api/: agents.py  analytics.py  branch_triage.py  bulk_queue_operations.py  ci.py  cycles.py  diff_review.py  editor.py  events.py  export.py  inbox.py  mcp.py  mcp_servers.py  memory.py  notifications.py  orchestration.py  parallel.py  parallel_websocket.py  queue_events.py  queue_management.py  queue_persistence.py  queue_review.py  runs.py  studio.py  system.py  terminal.py  ticket_studio.py  tickets.py  triage.py  usage.py  workflows.py  workspaces.py
server/loregarden/cli/: export_project_board.py  init_db.py  mcp_server.py
server/loregarden/core/: auth.py  event_bus.py  state_machine.py  workflow_loader.py
server/loregarden/db/: enum_integrity.py  migration_utils.py  migrations.py  migrations_templates.py  session.py
server/loregarden/mcp/: protocol.py  tools.py
server/loregarden/models/: domain.py
server/loregarden/models/domain/: __init__.py  enums.py  schemas.py  tables.py
server/loregarden/services/: acceptance_criteria.py  agent_scope.py  approval_views.py  artifact_service.py  branch_triage_chat_service.py  branch_triage_run_service.py  branch_triage_service.py  builtin_orchestrator.py  ci_service.py  cli_agent_runner.py  cli_output.py  cli_settings.py  code_map.py  compatibility_posture.py  conflict_detector.py  decomposition_service.py  draft_hierarchy.py  event_hub.py  evidence.py  export_service.py  file_editor.py  gate_runner.py  git_branch.py  git_commit_push_service.py  git_subprocess.py  github_pr_service.py  handoff_writer.py  hierarchy_service.py  mcp_health.py  mcp_registry.py  memory_config.py  memory_store.py  orchestration.py  orchestration_callbacks.py  orchestration_profile.py  parallel_queue.py  parallel_queue_websocket.py  path_browser.py  path_resolve.py  permission_allowlist.py  (+38 more)
server/loregarden/skills/: registry.py
server/tests/: TEST_82_ADVERSARIAL_FINDINGS.md  TEST_82_DESIGN_REPORT.md  TEST_DESIGN_25_ANALYSIS.md  conftest.py  test_82_adversarial_suite.py  test_82_child_visibility_detailed.py  test_82_explicit_feature_test.py  test_82_show_child_tickets_regardless_of_filter.py  test_adversarial_planning.py  test_agent_scope.py  test_agents_assemble_enhanced.py  test_agents_assemble_orchestration.py  test_analytics.py  test_api.py  test_approval_tool_input.py  test_artifact_service.py  test_auth.py  test_auto_mode_subtree.py  test_backlog_features.py  test_blobert_workflow.py  test_blocked_stage_report.py  test_blocking_issue_artifact.py  test_branch_triage.py  test_bulk_operations.py  test_cli_full_suite_evidence.py  test_cli_run_timeout.py  test_cli_runner.py  test_code_map.py  test_compatibility_posture.py  test_config.py  test_create_ticket.py  test_debugger_route.py  test_decomposition_service.py  test_definition_versioning.py  test_delete_ticket.py  test_diff_review.py  test_draft_hierarchy.py  test_enum_integrity.py  test_event_hub.py  test_evidence.py  (+97 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: app.config.json
src-tauri/src/: backend.rs  config.rs  main.rs
(+474 files in other folders)
