[project]
name = "loregarden-server"
version = "0.1.0"
description = "Loregarden control plane — agent SDLC orchestration"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "flask>=3.0.0",
    "flask-socketio>=5.4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loregarden"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["loregarden"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear, C4: comprehensions
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = [
    "E501",  # line length handled by the formatter, not enforced as a lint error
    "B008",  # FastAPI dependency-injection idiom relies on calls in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "E402"]
