[package]
name = "loregarden-desktop"
version = "0.1.0"
description = "Loregarden desktop shell — native host for the existing React/FastAPI app"
authors = ["Loregarden"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[profile.release]
strip = true
